plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.7'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.notecurve'
version = '0.0.1-SNAPSHOT'
description = 'Technical Blog & Personal Note Platform'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// --- Spring Boot 기본 의존성 ---
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// --- Database ---
	implementation 'com.mysql:mysql-connector-j:9.0.0'

	// --- JWT (JSON Web Token) ---
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// --- Spring Security Crypto ---
	implementation 'org.springframework.security:spring-security-crypto'

	// --- Jakarta (Spring Boot 3 표준) ---
	implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'

	// --- Apache Commons IO ---
    implementation 'commons-io:commons-io:2.11.0'

	// --- Lombok (컴파일 타임 전용) ---
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'

	// --- 테스트 ---
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
	useJUnitPlatform()
}
